<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeLapse</string>


    <!-- Overall Strings -->


    <string name="connection_with_camera_lost">The connection with the camera seems to be lost, we are trying our best to resolve the problem automatically.</string>
    <string name="connection_ws_unreachable">We couldn\'t send or we didn\'t receive instructions to/from the camera.</string>

    <!-- Connection Step Strings -->

    <string name="connection_information_message"><![CDATA[You have to connect your camera to your smartphone using wifi.
In your camera\'s menu, select <b>Ctrl with Smartphone</b> or <b>PlayMemories app</b>.<br />
You also can pair it by NFC (if it\'s possible)]]></string>

    <string name="connection_camera_list_update">Update camera list from internet</string>
    <string name="connection_camera_list_updated">The camera list is up to date</string>

    <string name="connection_permission_message">Your camera seems to not be connected to your
        smartphone. By accepting the following permission, we can help you to establish the
        connection. This permission will allow us to scan your wifi signals in order to find your
        camera.</string>
    <string name="connection_permission_ok">OK</string>
    <string name="connection_permission_cancel">Ignore</string>
    <string name="connection_permission_cancel_message">We cannot connect you automatically,
        you need to do it manually</string>

    <string name="connection_info">Connection information</string>
    <string name="connection_info_wifi_enabled">Wifi enabled</string>
    <string name="connection_info_wifi_enabled_state">Wifi enabled state</string>
    <string name="connection_info_network">Wifi connection</string>
    <string name="connection_info_network_state">Wifi connection state</string>
    <string name="connection_info_api">Sony API connection</string>
    <string name="connection_info_api_state">Sony API connection state</string>
    <string name="connection_choose_network">Choose network</string>
    <string name="connection_choose_network_cancel">Cancel</string>

    <string name="device_info">Device information</string>
    <string name="device_info_model">Camera model</string>

    <string name="connection_enter_password">Enter password for %1$s network</string>
    <string name="connection_enter_password_ok">Join</string>
    <string name="connection_enter_password_cancel">Cancel</string>

    <string name="connection_continue_automatic">Automatic connection (skip this step next time)</string>
    <string name="connection_continue_button">Continue</string>

    <string name="alert_disconnect_camera_title">Disconnect camera</string>
    <string name="alert_disconnect_camera_message">Do you want to disconnect the camera from the smartphone ?</string>
    <string name="alert_disconnect_camera_yes">Disconnect</string>
    <string name="alert_disconnect_camera_no">Stay connected</string>

    <!-- Adjustments Step Strings -->

    <string name="adjustments_message"><![CDATA[You can take a picture to adjust
        your field of view. Zoom is available only on few devices.<br /><br />
        More settings will be available in the future for supported devices]]></string>
    <string name="adjustments_zoom_title">Zoom</string>
    <string name="adjustments_flash_title">Flash</string>


    <!-- Settings Step Strings -->

    <string name="settings_message"><![CDATA[This is the last step before capture. <br /><br />
        On <u>RX100 mk2</u> and maybe on other devices be careful with <u>interval less than
        5sec</u>.]]></string>

    <string name="settings_initial_delay">Initial delay (s)</string>

    <string name="settings_interval_time">Interval between frames (s)</string>

    <string name="settings_frames_count">Frames count</string>
    <string name="settings_frames_count_unlimited">Unlimited</string>

    <string name="settings_initial_delay_positive_integer_error">Initial delay has to be a positive number</string>
    <string name="settings_interval_time_positive_integer_error">Interval time has to be a positive number</string>
    <string name="settings_frames_count_positive_integer_error">Frames count has to be a positive number</string>


    <!-- Processing Step Strings -->

    <string name="processing_begin_time">Start</string>

    <string name="processing_progress">Progress</string>

    <string name="processing_frames_count">Frames count</string>

    <string name="processing_chronometer_title">Elapsed Time</string>

    <string name="processing_next_picture">Next picture</string>

    <string name="processing_last_image_preview">Last picture taken</string>

    <string name="processing_error"><![CDATA[An error occurred during the process.<br />
        Click here for more details.]]></string>
    <string name="processing_error_ws_unreachable">• %1$d frames have been skipped because your device could not send information to the camera. This is could happen if you are far than the camera or if your camera battery is discharged.</string>
    <string name="processing_error_long_shot">• %1$d frames have been skipped because when the device asked for a new frame, the previous capturing was not completed. This can be caused by long exposures.</string>
    <string name="processing_error_unknown">• %1$d frames have been skipped due to an unknown error. This can happen on some old cameras when time between frames is too short. It is possible that the service on your camera was not well implemented. If it possible, try to update you camera firmware.</string>


    <string name="processing_stop">Stop Timelapse</string>
    <string name="processing_stop_confirmation_message">Are you sure you want to stop the timelapse ?</string>
    <string name="processing_stop_confirmation_message_ok">Stop</string>
    <string name="processing_stop_confirmation_message_cancel">Continue</string>


    <string name="processing_finish_title">Your timelapse is finished !</string>
    <string name="processing_finish_message">Your pictures have been stored in your camera storage or if it\'s not possible in the same location than when you take a normal picture.</string>

    <string name="notification_progress_title">Timelapse in progress…</string>
    <string name="notification_progress_message">Click here for more information</string>
    <string name="notification_progress_subtext">%1$d pictures taken</string>
    <string name="notification_progress_action_stop">Stop</string>

    <string name="notification_warning_title">Your timelapse encountered problems</string>
    <string name="notification_warning_message">Click here for more information</string>
    <string name="notification_warning_subtext">%1$d pictures have been skipped</string>
    <string name="notification_warning_action_dont_show_again">Don\'t show again</string>

    <string name="notification_finished_title">Your timelapse is finished</string>
    <string name="notification_finished_with_errors_title">Your timelapse finished with errors</string>
    <string name="channel_name">Sony Timelapse</string>
    <string name="channel_description">Timelapse is running</string>


</resources>