<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/connection_info_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connection_information_message"
                android:textAppearance="@style/TextSmall"
                android:textColor="#000"/>


            <!-- Camera selection -->

            <RelativeLayout
                android:id="@+id/connection_camera_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/connection_camera_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/connection_camera_model"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_photo_camera_black_24dp"/>


                <TextView
                    android:id="@+id/connection_camera_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/connection_camera_image"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/connection_camera_image"
                    android:layout_toRightOf="@id/connection_camera_image"
                    android:text="@string/connection_camera_model"
                    android:textAppearance="@style/TextMedium"/>

                <ImageView
                    android:id="@+id/connection_camera_list_update"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/connection_camera_text"
                    android:layout_toRightOf="@id/connection_camera_text"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/connection_camera_list_update"
                    app:srcCompat="@drawable/ic_refresh_black_24dp"
                    android:textSize="12sp"/>

                <ProgressBar
                    android:id="@+id/connection_camera_list_update_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/connection_camera_text"
                    android:layout_toRightOf="@id/connection_camera_text"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/accent"
                    android:indeterminateTintMode="src_in"
                    android:visibility="gone"/>

            </RelativeLayout>


            <Spinner
                android:id="@+id/connection_camera_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <!-- Connection info -->

            <RelativeLayout
                android:id="@+id/connection_info_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/connection_info_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/connection_info"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_feedback_black_24dp"/>

                <TextView
                    android:id="@+id/connection_info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/connection_info_image"
                    android:layout_toRightOf="@id/connection_info_image"
                    android:text="@string/connection_info"
                    android:textAppearance="@style/TextMedium"/>

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/connection_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#10000000"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp">


                    <ImageView
                        android:id="@+id/connection_info_wifi_enabled_icon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:contentDescription="@string/connection_info_wifi_enabled_state"
                        android:src="@drawable/error"/>

                    <ProgressBar
                        android:id="@+id/connection_info_wifi_enabled_progress"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/accent"
                        android:indeterminateTintMode="src_in"
                        android:visibility="gone"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/connection_info_wifi_enabled_icon"
                        android:layout_toStartOf="@id/connection_info_wifi_enabled_icon"
                        android:text="@string/connection_info_wifi_enabled"
                        android:textAppearance="@style/TextSmall"/>

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp">


                    <ImageView
                        android:id="@+id/connection_info_network_state"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:contentDescription="@string/connection_info_network_state"
                        android:src="@drawable/error"/>

                    <ProgressBar
                        android:id="@+id/connection_info_network_state_progress"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/accent"
                        android:indeterminateTintMode="src_in"
                        android:visibility="gone"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/connection_info_network_state"
                        android:layout_toStartOf="@id/connection_info_network_state"
                        android:text="@string/connection_info_network"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:textAppearance="@style/TextSmall"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:id="@+id/connection_info_api_state"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:contentDescription="@string/connection_info_api_state"
                        android:src="@drawable/error"/>

                    <ProgressBar
                        android:id="@+id/connection_info_api_state_progress"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/accent"
                        android:indeterminateTintMode="src_in"
                        android:visibility="gone"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/connection_info_api_state"
                        android:layout_toStartOf="@id/connection_info_api_state"
                        android:text="@string/connection_info_api"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:textAppearance="@style/TextSmall"/>

                </RelativeLayout>

            </LinearLayout>


            <CheckBox
                android:id="@+id/connection_automatic_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/connection_continue_automatic"/>

        </LinearLayout>


    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/connection_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/connection_continue_button"
        app:srcCompat="@drawable/ic_arrow_forward_white_24dp"
        app:fabSize="normal"/>


</android.support.design.widget.CoordinatorLayout>
