<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/settings_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_message"/>

        <TextView
            android:id="@+id/settings_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:visibility="gone"/>

        <!-- Initial Delay -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/settings_initial_delay_image"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/settings_initial_delay"
                app:srcCompat="@drawable/ic_timer_black_24dp"/>

            <TextView
                android:id="@+id/settings_initial_delay_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/settings_initial_delay_image"
                android:layout_toRightOf="@id/settings_initial_delay_image"
                android:text="@string/settings_initial_delay"
                android:textSize="16sp"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/settings_initial_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:text="@string/settings_initial_delay_default"/>

        <!-- Interval time -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/settings_interval_time_image"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/settings_interval_time"
                app:srcCompat="@drawable/ic_timelapse_black_24dp"/>

            <TextView
                android:id="@+id/settings_interval_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@+id/settings_interval_time_image"
                android:layout_toRightOf="@+id/settings_interval_time_image"
                android:text="@string/settings_interval_time"
                android:textSize="16sp"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/settings_interval_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:text="@string/settings_interval_time_default"/>

        <!-- Frames count -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/settings_frames_count_image"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignBottom="@+id/settings_frames_count_text"
                android:layout_centerVertical="true"
                android:contentDescription="@string/settings_frames_count"
                app:srcCompat="@drawable/ic_frames_count_black_24dp"/>

            <TextView
                android:id="@+id/settings_frames_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@+id/settings_frames_count_image"
                android:layout_toRightOf="@+id/settings_frames_count_image"
                android:text="@string/settings_frames_count"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/settings_frames_count_unlimited"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checked="true"
                android:text="@string/settings_frames_count_unlimited"
                android:textSize="16sp"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/settings_frames_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberSigned"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settings_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_play_arrow_white_24dp"
        app:fabSize="normal"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settings_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp"
        app:fabSize="normal"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>